fix css alignment

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h2 {
    margin: 0;
    flex-grow: 1;
    padding: 0;
-   align-content: center;
+   align-items: baseline;
    -webkit-overflow-scrolling: touch;
  }
 
